[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/ScenesScripts/TitleScreen/TitleScreenMenu.gd" type="Script" id=1]

[node name="TitleScreenMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -55.0
margin_top = -68.0
margin_right = 55.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="Button" parent="VBoxContainer"]
margin_right = 110.0
margin_bottom = 20.0
focus_neighbour_top = NodePath("../QuitButton")
text = "Nouvelle partie"

[node name="CreditButton" type="Button" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 110.0
margin_bottom = 44.0
text = "Cr√©dits"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
margin_top = 48.0
margin_right = 110.0
margin_bottom = 68.0
focus_neighbour_bottom = NodePath("../StartButton")
text = "Quitter"

[node name="Sprite" type="Sprite" parent="VBoxContainer"]

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="VBoxContainer/CreditButton" to="." method="_on_CreditButton_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
